@@ -1,3 +1,11 @@
+2005-08-02  Mark McLoughlin  <mark@skynet.ie>
+
+	Fixes bug #312337
+
+	* gobject/gobjectmodule.c: (_wrap_pyg_type_register):
+	Make the "already registered" warning a deprecation warning
+	with a more detailed hint on what it means.
+
 2005-08-01  Manish Singh  <yosh@gimp.org>
 
 	* gobject/pygobject-private.h
